fix: add gap

--- a/sites/scenes/src/components/layout.module.css
+++ b/sites/scenes/src/components/layout.module.css
@@ -9,6 +9,7 @@
 .content {
 	align-items: center;
 	display: flex;
+	gap: 80px;
 	justify-content: center;
 	z-index: 10;
 }
